# Robotic-book

./: .gitignore  DEPLOYMENT_CHECKLIST.md  Module-4-VLA-Conversation-Summary.md  README.md  WEBSITE_ISSUE_SUMMARY.md  deploy.sh  docusaurus.config.js  final_verification.py  package-lock.json  package.json  sidebars.js
Robotics-book/: docusaurus.config.ts  package-lock.json  sidebars.js  sidebars.ts
backend/: README.md  check_content_quality.py  check_qdrant_data.py  clear_qdrant.py  comprehensive_sitemap_test.py  debug_qdrant_content.py  debug_sitemap_parsing.py  demo.py  explore_site_content.py  extract_main_page_content.py  final_analysis.py  pyproject.toml  requirements.txt  test_accessible_urls.py  test_alternative_urls.py  test_cleaning.py  test_full_content.py  test_improved_cleaning.py  test_qdrant_connection.py  test_sitemap_with_get.py  verify_storage.py
backend/src/: main.py
backend/src/config/: settings.py
backend/src/crawler/: __init__.py  docusaurus_crawler.py  url_fetcher.py
backend/src/embedding/: __init__.py  cohere_embedder.py
backend/src/models/: __init__.py  crawl_session.py  crawled_page.py  document_chunk.py  embedding_record.py
backend/src/storage/: __init__.py  qdrant_storage.py
backend/src/text_processor/: __init__.py  text_chunker.py  text_cleaner.py
backend/src/utils/: __init__.py  exceptions.py  helpers.py  logger.py
backend/tests/integration/: test_pipeline.py
backend/tests/unit/: test_crawler.py  test_embedding.py  test_storage.py  test_text_processor.py
docs/: 404.md  Chapter-1-Physical-simulation-with-gazebo.md  (+13 more)
(+116 files in other folders)
